Changed the primary div content overflow to scroll Fixed the colour popover opening outside the view area, it now opens above the button if it would overflow

--- a/web/style.css
+++ b/web/style.css
@@ -135,7 +135,6 @@ label.separate_input {
 .colour_popover {
     border-radius: 8px;
     position: fixed;
-    margin-top: 40vh;
     box-shadow: 0 0 100px rgba(0,0,0,0.5);
     z-index: 25;
 }
@@ -176,6 +175,7 @@ label.separate_input {
 }
 
 .input_row {
+    position: relative;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -363,7 +363,7 @@ input[type=checkbox]:checked {
         display: flex;
     }
     .page.primary {
-
+        overflow-y: scroll;
     }
 
     .page.primary .hide_when_big_primary {
@@ -387,6 +387,7 @@ input[type=checkbox]:checked {
 }
 
 .colour_box {
+    position: relative;
     width: 5vh;
     height: 5vh;
     border-radius: 1vh;
